Remove `-XX:MaxPermSize`
This was removed in JDK 8 and produces a warning