@@ -30,7 +30,7 @@ out_folder=samples/server/petstore/php-ze-ph
 resources=modules/openapi-generator/src/main/resources/ze-ph
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 ags="generate -t $resources -i $input -g php-ze-ph -o $out_folder $@"
 
 java $JAVA_OPTS -jar $executable $ags
